Fix spacing css

--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,12 @@
 
 html {
   box-sizing: border-box;
+
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-
-  font: normal 100%/1.3, "Roboto Slab", serif;
+  font: normal 100%/1.3 "Roboto Slab", serif;
 }
 
 *, *::before, *::after {
